--- a/public/css/app.css
+++ b/public/css/app.css
@@ -904,6 +904,9 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
+.resize {
+  resize: both;
+}
 .list-inside {
   list-style-position: inside;
 }
